Fix overflow issue

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,7 +1,3 @@
-* {
-  overflow-x: hidden;
-}
-
 body {
   background-color: $body-color;
   overflow-x: hidden;
